<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_bottom_margin"
            android:layout_marginBottom="@dimen/button_bottom_margin"
            android:contentDescription="@string/logo_image"
            android:scaleType="fitCenter"
            android:src="@drawable/ballot_logo"
            app:layout_constraintBottom_toTopOf="@+id/upcoming_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/upcoming_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/upcoming_elections"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/representative_button"
            app:layout_constraintTop_toBottomOf="@+id/logo_image_view"/>

        <Button
            android:id="@+id/representative_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_bottom_margin"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/find_representatives"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upcoming_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>