<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin">

        <ImageView
            android:id="@+id/profile_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/profile_picture"
            android:padding="@dimen/small_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profileImage="@{representative.official.photoUrl}"
            tools:srcCompat="@drawable/ic_profile" />

        <ImageView
            android:id="@+id/web_image_view"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:padding="@dimen/small_margin"
            android:contentDescription="@string/www_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/facebook_image_view"
            app:srcCompat="@drawable/ic_www" />


        <ImageView
            android:id="@+id/facebook_image_view"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:padding="@dimen/small_margin"
            android:contentDescription="@string/facebook_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/twitter_image_view"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/twitter_image_view"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:padding="@dimen/small_margin"
            android:contentDescription="@string/twitter_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_twitter" />

        <TextView
            android:id="@+id/office_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{representative.office.name}"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/official_name_text_view"
            app:layout_constraintStart_toEndOf="@+id/profile_image_view"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="U.S. Senator" />


        <TextView
            android:id="@+id/official_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{representative.official.name}"
            android:textColor="@color/gray50"
            app:layout_constraintBottom_toTopOf="@+id/party_name_text_view"
            app:layout_constraintEnd_toStartOf="@+id/web_image_view"
            app:layout_constraintStart_toEndOf="@+id/profile_image_view"
            app:layout_constraintTop_toBottomOf="@+id/office_name_text_view"
            tools:text="Mike Pence" />

        <TextView
            android:id="@+id/party_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{representative.official.party}"
            android:textColor="@color/gray50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/web_image_view"
            app:layout_constraintStart_toEndOf="@+id/profile_image_view"
            app:layout_constraintTop_toBottomOf="@+id/official_name_text_view"
            tools:text="Republican Party" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>