<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.ElectionsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ImageView
            android:id="@+id/loading_image_view"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:contentDescription="@string/loading"
            android:src="@drawable/loading_animation"
            app:showLoading="@{viewModel.loading}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/upcoming_election_header_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="@dimen/normal_margin"
            android:text="@string/upcoming_elections"
            android:textColor="@color/gray50"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/upcoming_election_recycler_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcoming_election_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:listData="@{viewModel.upcomingElections}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upcoming_election_header_text_view"
            app:layout_constraintBottom_toTopOf="@+id/saved_election_header_text_view"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/election_list_item" />

        <TextView
            android:id="@+id/saved_election_header_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="@dimen/normal_margin"
            android:text="@string/saved_elections"
            android:textColor="@color/gray50"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/saved_election_recycler_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upcoming_election_recycler_view"
            app:layout_constraintVertical_bias="0.5" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/saved_election_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:listData="@{viewModel.savedElections}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saved_election_header_text_view"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/election_list_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>